Voice robot is worked

--- a/app/src/main/res/layout/input_dialog.xml
+++ b/app/src/main/res/layout/input_dialog.xml
@@ -25,7 +25,7 @@
                 app:srcCompat="@drawable/ic_close" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/voice1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="ТООГОО ОРУУЛНА УУ"
@@ -40,7 +40,7 @@
                 app:layout_constraintVertical_bias="0.165" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/voice3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -107,11 +107,11 @@
                 android:textAlignment="center"
                 android:textColor="@color/colorMain"
                 android:textSize="96sp"
-                app:layout_constraintBottom_toTopOf="@+id/textView3"
+                app:layout_constraintBottom_toTopOf="@+id/voice3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.504"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2"
+                app:layout_constraintTop_toBottomOf="@+id/voice1"
                 app:layout_constraintVertical_bias="1.0" />
 
         </android.support.constraint.ConstraintLayout>
