--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
         app:layout_constraintVertical_bias="0.221" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/amjilt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
