--- a/app/src/main/res/layout/input_dialog.xml
+++ b/app/src/main/res/layout/input_dialog.xml
@@ -25,7 +25,7 @@
                 app:srcCompat="@drawable/ic_close" />
 
             <TextView
-                android:id="@+id/voice1"
+                android:id="@+id/zaavar1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="ТООГОО ОРУУЛНА УУ"
@@ -52,6 +52,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.651" />
+
+            <TextView
+                android:id="@+id/inputResultText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text=""
+                android:textColor="@color/colorMain"
+                android:textStyle="italic"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.283" />
 
             <TextView
                 android:id="@+id/inputAttemptText"
@@ -111,7 +125,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.504"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/voice1"
+                app:layout_constraintTop_toBottomOf="@+id/zaavar1"
                 app:layout_constraintVertical_bias="1.0" />
 
         </android.support.constraint.ConstraintLayout>
