--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="75dp"
         android:layout_gravity="center"
         android:background="@drawable/rounded_button"
-        android:text="Заавар"
+        android:text="ЗААВАР"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
