--- a/app/src/main/res/layout/zaavar_dialog.xml
+++ b/app/src/main/res/layout/zaavar_dialog.xml
@@ -43,17 +43,18 @@
 
             <ImageView
                 android:id="@+id/zaavarImage"
-                android:layout_width="664dp"
-                android:layout_height="243dp"
+                android:layout_width="831dp"
+                android:layout_height="371dp"
                 android:layout_marginStart="84dp"
                 android:layout_marginTop="17dp"
                 android:layout_marginEnd="84dp"
                 android:layout_marginBottom="14dp"
                 app:layout_constraintBottom_toTopOf="@+id/voice3"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.499"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/zaavar1"
-                app:srcCompat="@drawable/zaavar" />
+                app:srcCompat="@drawable/zaavar3" />
 
             <TextView
                 android:id="@+id/voice3"
