--- a/app/src/main/res/layout/win_dialog.xml
+++ b/app/src/main/res/layout/win_dialog.xml
@@ -44,6 +44,8 @@
                 android:layout_marginBottom="12dp"
                 android:text="Та нэг дэхь оролдлогоороо тааж 4,999₮ хожлоо"
                 android:textAlignment="center"
+                android:gravity="center"
+                android:foregroundGravity="center"
                 android:textColor="@color/colorMain"
                 android:textSize="20sp"
                 android:textStyle="normal"
