keyboard garch irdeg deer zasvar oruulav

--- a/app/src/main/res/layout/zaavar_dialog.xml
+++ b/app/src/main/res/layout/zaavar_dialog.xml
@@ -54,7 +54,7 @@
                 app:layout_constraintHorizontal_bias="0.499"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/zaavar1"
-                app:srcCompat="@drawable/zaavar3" />
+                app:srcCompat="@drawable/zaavar" />
 
             <TextView
                 android:id="@+id/voice3"
